# zkwasm

./: .gitignore  Cargo.toml
crates/cli/test/: fibb.ts  test_cli.sh
crates/rpc/: Cargo.toml  README.md
crates/rpc/proto/: api.proto
crates/rpc/src/: asset.rs  client.rs  exec.rs  server.rs
crates/rpc/test-assets/image/: fibb.wasm
